@@ -3,20 +3,22 @@ package uk.gov.hmcts.reform.preapi.services;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import uk.gov.hmcts.reform.preapi.dto.reports.AccessRemovedReportDTO;
-import uk.gov.hmcts.reform.preapi.dto.reports.CompletedCaptureSessionReportDTO;
-import uk.gov.hmcts.reform.preapi.dto.reports.ConcurrentCaptureSessionReportDTO;
-import uk.gov.hmcts.reform.preapi.dto.reports.EditReportDTO;
-import uk.gov.hmcts.reform.preapi.dto.reports.PlaybackReportDTO;
+import uk.gov.hmcts.reform.preapi.dto.reports.AccessRemovedReportDTOV2;
+import uk.gov.hmcts.reform.preapi.dto.reports.CompletedCaptureSessionReportDTOV2;
+import uk.gov.hmcts.reform.preapi.dto.reports.ConcurrentCaptureSessionReportDTOV2;
+import uk.gov.hmcts.reform.preapi.dto.reports.EditReportDTOV2;
+import uk.gov.hmcts.reform.preapi.dto.reports.PlaybackReportDTOV2;
 import uk.gov.hmcts.reform.preapi.dto.reports.RecordingParticipantsReportDTO;
-import uk.gov.hmcts.reform.preapi.dto.reports.RecordingsPerCaseReportDTO;
-import uk.gov.hmcts.reform.preapi.dto.reports.ScheduleReportDTO;
-import uk.gov.hmcts.reform.preapi.dto.reports.SharedReportDTO;
+import uk.gov.hmcts.reform.preapi.dto.reports.RecordingsPerCaseReportDTOV2;
+import uk.gov.hmcts.reform.preapi.dto.reports.ScheduleReportDTOV2;
+import uk.gov.hmcts.reform.preapi.dto.reports.SharedReportDTOV2;
+import uk.gov.hmcts.reform.preapi.dto.reports.UserPrimaryCourtReportDTO;
 import uk.gov.hmcts.reform.preapi.entities.AppAccess;
 import uk.gov.hmcts.reform.preapi.entities.Audit;
 import uk.gov.hmcts.reform.preapi.entities.Case;
 import uk.gov.hmcts.reform.preapi.entities.PortalAccess;
 import uk.gov.hmcts.reform.preapi.entities.Recording;
+import uk.gov.hmcts.reform.preapi.entities.ShareBooking;
 import uk.gov.hmcts.reform.preapi.enums.AuditLogSource;
 import uk.gov.hmcts.reform.preapi.enums.RecordingStatus;
 import uk.gov.hmcts.reform.preapi.exception.NotFoundException;
@@ -62,60 +64,61 @@ public class ReportService {
     }
 
     @Transactional
-    public List<ConcurrentCaptureSessionReportDTO> reportCaptureSessions() {
+    public List<ConcurrentCaptureSessionReportDTOV2> reportCaptureSessions() {
         return captureSessionRepository
             .reportConcurrentCaptureSessions()
             .stream()
-            .map(ConcurrentCaptureSessionReportDTO::new)
+            .map(ConcurrentCaptureSessionReportDTOV2::new)
             .collect(Collectors.toList());
     }
 
     @Transactional
-    public List<RecordingsPerCaseReportDTO> reportRecordingsPerCase() {
+    public List<RecordingsPerCaseReportDTOV2> reportRecordingsPerCase() {
         return recordingRepository
             .countRecordingsPerCase()
             .stream()
-            .map(data -> new RecordingsPerCaseReportDTO((Case) data[0], ((Long) data[1]).intValue()))
+            .map(data -> new RecordingsPerCaseReportDTOV2((Case) data[0], ((Long) data[1]).intValue()))
             .toList();
     }
 
     @Transactional
-    public List<EditReportDTO> reportEdits() {
+    public List<EditReportDTOV2> reportEdits() {
         return recordingRepository
             .findAllByParentRecordingIsNotNull()
             .stream()
-            .map(EditReportDTO::new)
-            .sorted(Comparator.comparing(EditReportDTO::getCreatedAt))
-            .toList();
+            .sorted(Comparator.comparing(Recording::getCreatedAt))
+            .map(EditReportDTOV2::new)
+            .collect(Collectors.toList());
     }
 
     @Transactional
-    public List<SharedReportDTO> reportShared(
+    public List<SharedReportDTOV2> reportShared(
         UUID courtId,
         UUID bookingId,
         UUID sharedWithId,
-        String sharedWithEmail
+        String sharedWithEmail,
+        boolean onlyActive
     ) {
         return shareBookingRepository
-            .searchAll(courtId, bookingId, sharedWithId, sharedWithEmail)
+            .searchAll(courtId, bookingId, sharedWithId, sharedWithEmail, onlyActive)
             .stream()
-            .map(SharedReportDTO::new)
-            .sorted(Comparator.comparing(SharedReportDTO::getSharedAt))
-            .toList();
+            .sorted(Comparator.comparing(ShareBooking::getCreatedAt))
+            .map(SharedReportDTOV2::new)
+            .collect(Collectors.toList());
     }
 
     @Transactional
-    public List<ScheduleReportDTO> reportScheduled() {
+    public List<ScheduleReportDTOV2> reportScheduled() {
         return captureSessionRepository
             .findAllByStatus(RecordingStatus.RECORDING_AVAILABLE)
             .stream()
-            .map(ScheduleReportDTO::new)
-            .sorted(Comparator.comparing(ScheduleReportDTO::getScheduledFor))
-            .toList();
+            .sorted(Comparator.comparing(c -> c.getBooking().getScheduledFor()))
+            .map(ScheduleReportDTOV2::new)
+            .collect(Collectors.toList());
     }
 
     @Transactional
-    public List<PlaybackReportDTO> reportPlayback(AuditLogSource source) {
+    public List<PlaybackReportDTOV2> reportPlayback(AuditLogSource source) {
         if (source == null) {
             return auditRepository
                 .findAllAccessAttempts()
@@ -144,23 +147,23 @@ public class ReportService {
     }
 
     @Transactional
-    public List<CompletedCaptureSessionReportDTO> reportCompletedCaptureSessions() {
+    public List<CompletedCaptureSessionReportDTOV2> reportCompletedCaptureSessions() {
         return recordingRepository
-            .findAllByParentRecordingIsNull()
+            .findAllCompletedCaptureSessionsWithRecordings()
             .stream()
-            .map(CompletedCaptureSessionReportDTO::new)
-            .sorted(Comparator.comparing(CompletedCaptureSessionReportDTO::getScheduledFor))
-            .toList();
+            .sorted(Comparator.comparing(r -> r.getCaptureSession().getBooking().getScheduledFor()))
+            .map(CompletedCaptureSessionReportDTOV2::new)
+            .collect(Collectors.toList());
     }
 
     @Transactional
-    public List<AccessRemovedReportDTO> reportAccessRemoved() {
+    public List<AccessRemovedReportDTOV2> reportAccessRemoved() {
         return shareBookingRepository
             .findAllByDeletedAtIsNotNull()
             .stream()
-            .map(AccessRemovedReportDTO::new)
-            .sorted(Comparator.comparing(AccessRemovedReportDTO::getRemovedAt))
-            .toList();
+            .sorted(Comparator.comparing(ShareBooking::getDeletedAt))
+            .map(AccessRemovedReportDTOV2::new)
+            .collect(Collectors.toList());
     }
 
     @Transactional
@@ -183,7 +186,7 @@ public class ReportService {
             .toList();
     }
 
-    private PlaybackReportDTO toPlaybackReport(Audit audit) {
+    private PlaybackReportDTOV2 toPlaybackReport(Audit audit) {
         // S28-3604 discovered audit details records Recording Id as recordingId _and_ recordinguid
         var auditDetails = audit.getAuditDetails() != null && !audit.getAuditDetails().isNull();
         UUID recordingId = null;
@@ -195,7 +198,7 @@ public class ReportService {
             }
         }
 
-        return new PlaybackReportDTO(
+        return new PlaybackReportDTOV2(
             audit,
             audit.getCreatedBy() != null
                 ? userRepository
@@ -210,5 +213,19 @@ public class ReportService {
                 ? recordingRepository.findById(recordingId).orElse(null)
                 : null
         );
+    }
+
+    @Transactional
+    public List<UserPrimaryCourtReportDTO> reportUserPrimaryCourts() {
+
+        return this.appAccessRepository.getUserPrimaryCourtsForReport()
+            .stream()
+            .map(access -> new UserPrimaryCourtReportDTO(access.getUser().getFirstName(),
+                                                         access.getUser().getLastName(),
+                                                         access.getCourt().getName(),
+                                                         access.isActive(),
+                                                         access.getRole().getName(),
+                                                         access.getLastAccess()))
+            .toList();
     }
 }
